# codebase-assistant

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
ingestion/: chunk_code.py  embed_chunks.py  embed_chunks_into_vectorstore.py  ingest_repo.py  ingestion_util.py  load_vectorstore.py
langgraph_flow/: graph_builder.py
langgraph_flow/agents/: agent.py  enums.py  explainer_agent.py  intent_classifier.py  navigator_agent.py  retriever_agent.py
langgraph_flow/models/: assistant_state.py  openai_model.py
langgraph_flow/prompts/: explanation_prompt.txt  intent_prompt.txt  navigation_prompt.txt  retrieval_prompt.txt
utils/: agent_utils.py  constants.py  util.py
vectorstore/chroma_index/: chroma.sqlite3
